tests/baselines/reference/continueNotInIterationStatement4.errors.txt
continueNotInIterationStatement4.ts(4,5): error TS1107: Jump target cannot cross function boundary.


==== continueNotInIterationStatement4.ts (1 errors) ====
    TWO:
    while (true){
      var x = () => {
        continue TWO;
        ~~~~~~~~~~~~~
!!! error TS1107: Jump target cannot cross function boundary.
      }
    }
    